--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
             }
         ]
     },
+    "license": "https://github.com/BouKiCHi/vscode-pasmo/blob/master/LICENSE",
     "homepage": "https://github.com/BouKiCHi/vscode-pasmo/blob/master/README.md",
     "repository": {
         "type": "git",
